2007-04-19  George Liu  <george.liu@ricoh-tech.com>

	* Added 95 PPD files for 53 Ricoh family printer models
	* Updated PPD, driver and printer directory.

2007-04-03  Tim Waugh  <twaugh@redhat.com>

	* printer/Epson-Stylus_C40.xml: Added IEEE 1284 information (RH
	bug #234775).

2007-03-30  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.xml, driver/hl7x0.xml: Added extra info
	  about the drivers.

	* printer/Brother-DCP-8045D.xml, driver/Postscript.xml,
	  driver/hl7x0.xml, driver/hl1250.xml, driver/ljet4.xml,
	  driver/pxlmono.xml, driver/lj5gray.xml, driver/lj5mono.xml:
	  Added the Brother DCP-8045D (thanks to Tim Fechtner, urwald at
	  gmx-topmail dot de).
	  
2007-03-15  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/lxm3200-tweaked.xml: Fixed "<nmae>" field (Thanks to
	  Poprocks for his report on the forum).

2007-02-27  John Hosszu <john.hosszu@hp.com>

	* resync
	* printer/: Added
          HP-OfficeJet_J5700.xml
          HP-OfficeJet_Pro_K5300.xml
          HP-OfficeJet_Pro_K5400.xml
          HP-OfficeJet_Pro_L7300.xml
          HP-OfficeJet_Pro_L7500.xml
          HP-OfficeJet_Pro_L7600.xml
          HP-OfficeJet_Pro_L7700.xml


2007-02-27  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/rastertokmXXXXdl.xml: Filled new driver information
	  fields.

	* printer/KonicaMinolta-magicolor_2300_DL.xml,
	  printer/KonicaMinolta-magicolor_2430_DL.xml,
	  printer/KonicaMinolta-magicolor_2490_MF.xml,
	  printer/KonicaMinolta-magicolor_2530_DL.xml,
	  printer/KonicaMinolta-magicolor_5430_DL.xml,
	  printer/KonicaMinolta-magicolor_5440_DL.xml,
	  printer/KONICA_MINOLTA-magicolor_2300_DL.xml,
	  printer/KONICA_MINOLTA-magicolor_2430_DL.xml,
	  printer/KONICA_MINOLTA-magicolor_2490_MF.xml,
	  printer/KONICA_MINOLTA-magicolor_2530_DL.xml,
	  printer/KONICA_MINOLTA-magicolor_5430_DL.xml,
	  printer/KONICA_MINOLTA-magicolor_5440_DL.xml,
	  driver/foo2lava.xml, driver/foo2zjs.xml,
	  driver/rastertokmXXXXdl.xml, db/oldprinterids: Changed