@@ -28,42 +28,6 @@
       <id>printer/Generic-PCL_6_PCL_XL_Printer</id>
     </printer>
     <printer>
-      <id>printer/Gestetner-CS555</id>
-    </printer>
-    <printer>
-      <id>printer/Gestetner-DSc424</id>
-    </printer>
-    <printer>
-      <id>printer/Gestetner-DSc428</id>
-    </printer>
-    <printer>
-      <id>printer/Gestetner-DSc432</id>
-    </printer>
-    <printer>
-      <id>printer/Gestetner-DSc435</id>
-    </printer>
-    <printer>
-      <id>printer/Gestetner-DSc445</id>
-    </printer>
-    <printer>
-      <id>printer/Gestetner-DSc460</id>
-    </printer>
-    <printer>
-      <id>printer/Gestetner-MPC1500_GS106</id>
-    </printer>
-    <printer>
-      <id>printer/Gestetner-MPC2500_DSc525</id>
-    </printer>
-    <printer>
-      <id>printer/Gestetner-MPC3000_DSc530</id>
-    </printer>
-    <printer>
-      <id>printer/Gestetner-MPC3500_DSc535</id>
-    </printer>
-    <printer>
-      <id>printer/Gestetner-MPC4500_DSc545</id>
-    </printer>
-    <printer>
       <id>printer/HP-Business_Inkjet_3000</id>
     </printer>
     <printer>
@@ -92,185 +56,6 @@
     <printer>
       <id>printer/HP-Color_LaserJet_5500</id>
     </printer>
-    <printer>
-      <id>printer/Infotec-ISC_1024c</id>
-    </printer>
-    <printer>
-      <id>printer/Infotec-ISC_1032c</id>
-    </printer>
-    <printer>
-      <id>printer/Infotec-ISC_2428</id>
-    </printer>
-    <printer>
-      <id>printer/Infotec-ISC_2525</id>
-    </printer>
-    <printer>
-      <id>printer/Infotec-ISC_2835</id>
-    </printer>
-    <printer>
-      <id>printer/Infotec-ISC_3030</id>
-    </printer>
-    <printer>
-      <id>printer/Infotec-ISC_3535</id>
-    </printer>
-    <printer>
-      <id>printer/Infotec-ISC_3545</id>
-    </printer>
-    <printer>
-      <id>printer/Infotec-ISC_4045</id>
-    </printer>
-    <printer>
-      <id>printer/Infotec-ISC_4560</id>
-    </printer>
-    <printer>
-      <id>printer/Infotec-ISC_5560</id>
-    </printer>
-    <printer>
-      <id>printer/Infotec-ISC_615G</id>
-    </printer>
-    <printer>
-      <id>printer/Lanier-LC155</id>
-    </printer>
-    <printer>
-      <id>printer/Lanier-LD124c</id>
-    </printer>
-    <printer>
-      <id>printer/Lanier-LD132c</id>
-    </printer>
-    <printer>
-      <id>printer/Lanier-LD160c</id>
-    </printer>
-    <printer>
-      <id>printer/Lanier-LD328c</id>
-    </printer>
-    <printer>
-      <id>printer/Lanier-LD335c</id>
-    </printer>
-    <printer>
-      <id>printer/Lanier-LD345c</id>
-    </printer>
-    <printer>
-      <id>printer/Lanier-MPC1500_LD215c</id>
-    </printer>
-    <printer>
-      <id>printer/Lanier-MP_C2500_LD425c</id>
-    </printer>
-    <printer>
-      <id>printer/Lanier-MP_C3000_LD430c</id>
-    </printer>
-    <printer>
-      <id>printer/Lanier-MP_C3500_LD435c</id>
-    </printer>
-    <printer>
-      <id>printer/Lanier-MP_C4500_LD445c</id>
-    </printer>
-    <printer>
-      <id>printer/NRG-CS555</id>
-    </printer>
-    <printer>
-      <id>printer/NRG-DSc424</id>
-    </printer>
-    <printer>
-      <id>printer/NRG-DSc428</id>
-    </printer>
-    <printer>
-      <id>printer/NRG-DSc432</id>
-    </printer>
-    <printer>
-      <id>printer/NRG-DSc435</id>
-    </printer>
-    <printer>
-      <id>printer/NRG-DSc445</id>
-    </printer>
-    <printer>
-      <id>printer/NRG-DSc460</id>
-    </printer>
-    <printer>
-      <id>printer/NRG-MP_C1500sp</id>
-    </printer>
-    <printer>
-      <id>printer/NRG-MP_C2500</id>
-    </printer>
-    <printer>
-      <id>printer/NRG-MP_C3000</id>
-    </printer>
-    <printer>
-      <id>printer/NRG-MP_C3500</id>
-    </printer>
-    <printer>
-      <id>printer/NRG-MP_C4500</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-Aficio_3224C</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-Aficio_3228C</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-Aficio_3232C</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-Aficio_3235C</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-Aficio_3245C</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-Aficio_3260C</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-Aficio_Color5560</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-Aficio_MP_C2500</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-Aficio_MP_C3000</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-Aficio_MP_C3500</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-Aficio_MP_C4500</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-MP_C1500_615C</id>
-    </printer>
-    <printer>
-      <id>printer/Savin-C2410</id>
-    </printer>
-    <printer>
-      <id>printer/Savin-C2525</id>
-    </printer>
-    <printer>
-      <id>printer/Savin-C2824</id>
-    </printer>
-    <printer>
-      <id>printer/Savin-C3030</id>
-    </printer>
-    <printer>
-      <id>printer/Savin-C3210e</id>
-    </printer>
-    <printer>
-      <id>printer/Savin-C3528</id>
-    </printer>
-    <printer>
-      <id>printer/Savin-C3535</id>
-    </printer>
-    <printer>
-      <id>printer/Savin-C4535</id>
-    </printer>
-    <printer>
-      <id>printer/Savin-C4540</id>
-    </printer>
-    <printer>
-      <id>printer/Savin-C6045</id>
-    </printer>
-    <printer>
-      <id>printer/Savin-SDC555</id>
-    </printer>
-    <printer>
-      <id>printer/Savin-SGC_1506</id>
-    </printer>
-  </printers>
+ </printers>
 </driver>
+
