@@ -1,3 +1,7 @@
+2007-04-20  George Liu  <george.liu@ricoh-tech.com>
+
+	* Removed all Ricoh Family printer entries from pxlcolor.xml
+
 2007-04-19  George Liu  <george.liu@ricoh-tech.com>
 
 	* Added 95 PPD files for 53 Ricoh family printer models
